tests/baselines/reference/classAbstractAccessor.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(2,17): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(3,17): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(4,17): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(5,17): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts (4 errors) ====
    abstract class A {
       abstract get a();
                    ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
       abstract get aa() { return 1; } // error
                    ~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
       abstract set b(x: string);
                    ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
       abstract set bb(x: string) {} // error
                    ~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    